Add parameters to post and put
